--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   floor: ^0.17.0
+  shared_preferences: ^0.5.12+2
+
 
 dev_dependencies:
   flutter_test:
