--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   shared_preferences: ^0.5.12+2
   firebase_database: ^4.2.0
   toast: ^0.1.5
+  webview_flutter: ^1.0.5
 
 
 dev_dependencies:
@@ -53,7 +54,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/expenses.jpeg
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
